<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/whole_ll"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.amastigote.templatemsg.activity.MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:hint="@string/tplt_here"
            android:id="@+id/g"
            android:layout_width="match_parent"
            android:layout_height="150dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cfm_tplt" />
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/b"
                android:layout_toEndOf="@id/a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"/>
            <Button
                android:theme="@style/AppTheme_alpha"
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/c"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:layout_gravity="end" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/k"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ist_v"/>
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/l"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ist_n"/>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/e"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>
    
</LinearLayout>
